objects/PLNDR_LOS__Mapper__mdt.object
<CustomObject>
    <fields>
        <fullName>PLNDR_LOS__Action__c</fullName>
        <label>Action</label>
        <referenceTo>PLNDR_LOS__Action__mdt</referenceTo>
        <relationshipLabel>Mappers</relationshipLabel>
        <relationshipName>Mappers</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PLNDR_LOS__Argument__c</fullName>
        <label>Argument</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PL Opportunity Id</fullName>
                    <default>true</default>
                    <label>PL Opportunity Id</label>
                </value>
                <value>
                    <fullName>PL Opportunity Name</fullName>
                </value>
                <value>
                    <fullName>PL Relationship External Id</fullName>
                </value>
                <value>
                    <fullName>PL Core Account External Id</fullName>
                </value>
                <value>
                    <fullName>PL Loan Id</fullName>
                </value>
                <value>
                    <fullName>PL Deposit Id</fullName>
                </value>
                <value>
                    <fullName>PL Other Id</fullName>
                </value>
                <value>
                    <fullName>Close Date</fullName>
                </value>
                <value>
                    <fullName>Stage</fullName>
                </value>
                <value>
                    <fullName>Probability</fullName>
                </value>
                <value>
                    <fullName>Risk Rating</fullName>
                </value>
                <value>
                    <fullName>Facility Rating</fullName>
                </value>
                <value>
                    <fullName>Parent Id</fullName>
                </value>
                <value>
                    <fullName>Renewal Id</fullName>
                </value>
                <value>
                    <fullName>External System Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLNDR_LOS__Source_Field__c</fullName>
        <label>Source Field</label>
        <metadataRelationshipControllingField>PLNDR_LOS__Mapper__mdt.PLNDR_LOS__Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Mappers</relationshipLabel>
        <relationshipName>Mappers</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>PLNDR_LOS__Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Mappers</relationshipLabel>
        <relationshipName>Mappers</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Mapper</label>
    <pluralLabel>Mappers</pluralLabel>
</CustomObject>